<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/me_bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_changepwd_back"
            style="@style/BackStyle"
            android:src="@drawable/i_back_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/changepwd_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_changepwd_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:drawableRight="@drawable/i_moreright"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:paddingRight="16dp"
        android:text="@string/changepwd_login"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <include layout="@layout/segmentation_gray" />

    <TextView
        android:id="@+id/tv_changepwd_pay"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:drawableRight="@drawable/i_moreright"
        android:gravity="center_vertical"
        android:paddingLeft="14dp"
        android:paddingRight="16dp"
        android:text="@string/changepwd_pay"
        android:textColor="@color/black"
        android:textSize="14sp" />
</LinearLayout>